    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.17.1
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.17.2

  [ Ben Hutchings ]
  * Set ABI to trunk
  * aufs: Update to aufs3.17-20141020:
    - support for AT_EMPTY_PATH/LOOKUP_EMPTY
    - Show union filesystem paths in /proc/*/map_files/*
    - bugfix, fix the returning size of the branch attr

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 06 Nov 2014 21:01:22 +0000

linux (3.17-1~exp1) experimental; urgency=medium

  * New upstream release: http://kernelnewbies.org/Linux_3.17

  * armel: Drop ixp4xx image.
  * topconfig: Reenable renamed IP_NF_NAT. (closes #762458)
  * udeb: refix renamed i2c-core.

 -- maximilian attems <maks@debian.org>  Tue, 14 Oct 2014 23:01:39 +0200

linux (3.17~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update to aufs3.x-rcN-20140908

  [ maximilian attems ]
  * udeb: fix renamed i2ccore.

 -- maximilian attems <maks@debian.org>  Thu, 18 Sep 2014 23:50:00 +0200

linux (3.16.7-2) unstable; urgency=medium

  [ Ian Campbell ]
  * Disable TSO in mv643xx_eth driver by default (Closes: #764162).

  [ Aurelien Jarno ]
  * [i386] Rename 486 flavour to 586 for udebs. (Closes: #768288)

  [ Ben Hutchings ]
  * [hppa] udeb: Fix modules in multiple packages (Closes: 768297)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 06 Nov 2014 17:42:26 +0000

linux (3.16.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.16.6
    - rtnetlink: fix VF info size (regression in 3.11)
    - myri10ge: check for DMA mapping errors
    - Revert "macvlan: simplify the structure port" (regression in 3.16)
    - tcp: don't use timestamp from repaired skb-s to calculate RTT (v2)
      (regression in 3.15)
    - tcp: fix tcp_release_cb() to dispatch via address family for
      mtu_reduced()
    - tipc: fix message importance range check (regression in 3.15)