@@ -27,7 +27,7 @@ arches:
  sparc
  sparc64
  x32
-compiler: gcc-4.8
+compiler: gcc-4.9
 featuresets:
  none
  rt
@@ -51,6 +51,7 @@ gcc-4.4: gcc-4.4
 gcc-4.6: gcc-4.6
 gcc-4.7: gcc-4.7
 gcc-4.8: gcc-4.8
+gcc-4.9: gcc-4.9
 
 # initramfs-generators
 initramfs-fallback: linux-initramfs-tool
