@@ -2,6 +2,8 @@
 flavours:
  s390x
 kernel-arch: s390
+# gcc 4.9 breaks access to virtual address 0
+compiler: gcc-4.8
 
 [build]
 image-file: arch/s390/boot/image
