@@ -1,9 +1,9 @@
-Package: linux-compiler-gcc-4.8-arm
-Depends: gcc-4.8, ${misc:Depends}
+Package: linux-compiler-gcc-4.9-arm
+Depends: gcc-4.9, ${misc:Depends}
 Architecture: armel armhf
 Multi-Arch: foreign
 Description: Compiler for Linux on ARM (meta-package)
- This package depends on gcc 4.8 of the appropriate architecture for
+ This package depends on gcc 4.9 of the appropriate architecture for
  Linux on armel and armhf.
 
 Package: linux-compiler-gcc-4.8-s390
@@ -14,10 +14,10 @@ Description: Compiler for Linux on IBM zSeries (meta-package)
  This package depends on gcc 4.8 of the appropriate architecture for
  Linux on s390 and s390x.
 
-Package: linux-compiler-gcc-4.8-x86
-Depends: gcc-4.8, ${misc:Depends}
+Package: linux-compiler-gcc-4.9-x86
+Depends: gcc-4.9, ${misc:Depends}
 Architecture: amd64 i386 x32
 Multi-Arch: foreign
 Description: Compiler for Linux on x86 (meta-package)
- This package depends on gcc 4.8 of the appropriate architecture for
+ This package depends on gcc 4.9 of the appropriate architecture for
  Linux on amd64, i386 and x32.
