@@ -10,6 +10,7 @@ linux (3.17.2-1~exp1) UNRELEASED; urgency=medium
     - support for AT_EMPTY_PATH/LOOKUP_EMPTY
     - Show union filesystem paths in /proc/*/map_files/*
     - bugfix, fix the returning size of the branch attr
+  * Make gcc-4.9 the default compiler (except on s390*)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 06 Nov 2014 21:01:22 +0000
 
